--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-    "name": "Scouting",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "Scouting",
+  "version": "0.0.1",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "4.4.6",
+    "@angular/compiler": "4.4.6",
+    "@angular/compiler-cli": "4.4.6",
+    "@angular/core": "4.4.6",
+    "@angular/forms": "4.4.6",
+    "@angular/http": "4.4.6",
+    "@angular/platform-browser": "4.4.6",
+    "@angular/platform-browser-dynamic": "4.4.6",
+    "@ionic-native/core": "4.3.2",
+    "@ionic-native/splash-screen": "4.3.2",
+    "@ionic-native/sqlite": "^4.3.2",
+    "@ionic-native/sqlite-porter": "^4.3.2",
+    "@ionic-native/status-bar": "4.3.2",
+    "@ionic/storage": "2.0.1",
+    "cordova-android": "^6.2.3",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-ionic-webview": "^1.1.11",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-sqlite-storage": "^2.0.4",
+    "ionic-angular": "3.7.1",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "rxjs": "^5.5.0",
+    "sw-toolbox": "3.6.0",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.1",
+    "zone.js": "0.8.18"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.0.1",
+    "typescript": "2.5.3"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {},
+      "cordova-plugin-statusbar": {}
     },
-    "dependencies": {
-        "@angular/common": "4.4.6",
-        "@angular/compiler": "4.4.6",
-        "@angular/compiler-cli": "4.4.6",
-        "@angular/core": "4.4.6",
-        "@angular/forms": "4.4.6",
-        "@angular/http": "4.4.6",
-        "@angular/platform-browser": "4.4.6",
-        "@angular/platform-browser-dynamic": "4.4.6",
-        "@ionic-native/core": "4.3.2",
-        "@ionic-native/splash-screen": "4.3.2",
-        "@ionic-native/sqlite": "^4.3.2",
-        "@ionic-native/sqlite-porter": "^4.3.2",
-        "@ionic-native/status-bar": "4.3.2",
-        "@ionic/storage": "2.0.1",
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-ionic-webview": "^1.1.11",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.3",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-sqlite-storage": "^2.0.4",
-        "ionic-angular": "3.7.1",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "rxjs": "5.5.0",
-        "sw-toolbox": "3.6.0",
-        "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.1",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "3.0.1",
-        "typescript": "2.5.3"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "uk.co.workingedge.cordova.plugin.sqliteporter": {},
-            "cordova-plugin-statusbar": {}
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
