--- a/package.json
+++ b/package.json
@@ -21,18 +21,24 @@
     "@angular/platform-browser": "4.4.6",
     "@angular/platform-browser-dynamic": "4.4.6",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/file": "^4.5.2",
+    "@ionic-native/http": "^4.5.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/sqlite": "^4.3.2",
     "@ionic-native/sqlite-porter": "^4.3.2",
     "@ionic-native/status-bar": "4.3.2",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "cordova-android": "^6.2.3",
+    "cordova-plugin-advanced-http": "^1.9.1",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-file": "^4.3.3",
     "cordova-plugin-ionic-webview": "^1.1.11",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.0.4",
+    "cordova-windows": "5.0.0",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -55,10 +61,13 @@
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
       "uk.co.workingedge.cordova.plugin.sqliteporter": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "windows"
     ]
   }
 }
