--- a/package.json
+++ b/package.json
@@ -31,21 +31,22 @@
     "cordova-android": "^6.2.3",
     "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-file": "^4.3.3",
-    "cordova-plugin-ionic-webview": "^1.1.11",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-sqlite-storage": "^2.0.4",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.2.0",
     "cordova-windows": "5.0.0",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "^5.5.0",
     "sw-toolbox": "3.6.0",
-    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.1",
-    "zone.js": "0.8.18"
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
+    "zone.js": "0.8.18",
+    "cordova-ios": "~4.5.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
@@ -67,7 +68,8 @@
     },
     "platforms": [
       "android",
-      "windows"
+      "windows",
+      "ios"
     ]
   }
 }
