--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@ionic-native/sqlite-porter": "^4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "^2.0.1",
-    "cordova-android": "^6.2.3",
+    "cordova-android": "6.2.3",
+    "cordova-ios": "~4.5.4",
     "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
@@ -45,8 +46,7 @@
     "rxjs": "^5.5.0",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
-    "zone.js": "0.8.18",
-    "cordova-ios": "~4.5.4"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
