--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "^2.0.1",
     "cordova-android": "6.2.3",
+    "cordova-browser": "5.0.3",
     "cordova-ios": "4.5.4",
     "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-compat": "^1.2.0",
