--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@ionic-native/sqlite-porter": "^4.5.3",
     "@ionic-native/status-bar": "^4.3.2",
     "@ionic/storage": "^2.0.1",
+    "@types/chartjs": "0.0.31",
     "@types/d3": "^4.12.0",
+    "chartjs": "^0.3.24",
     "cordova-android": "^6.3.0",
+    "cordova-browser": "5.0.3",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-advanced-http": "^1.9.1",
     "cordova-plugin-compat": "^1.2.0",
@@ -45,6 +48,7 @@
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.0",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
@@ -71,7 +75,8 @@
     "platforms": [
       "android",
       "ios",
-      "windows"
+      "windows",
+      "browser"
     ]
   }
 }
