--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/storage": "^2.0.1",
     "@types/chartjs": "0.0.31",
     "@types/d3": "^4.12.0",
+    "chartjs": "^0.3.24",
     "cordova-android": "^6.3.0",
     "cordova-browser": "5.0.3",
     "cordova-ios": "^4.5.4",
