--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/chartjs": "0.0.31",
     "@types/d3": "^4.12.0",
     "@types/chart.js": "^2.7.6",
-    "chart.js": "^2.7.1"
+    "chart.js": "^2.7.1",
     "cordova-android": "^6.3.0",
     "cordova-browser": "5.0.3",
     "cordova-ios": "^4.5.4",
