--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@ionic-native/sqlite": "^4.5.3",
     "@ionic-native/sqlite-porter": "^4.5.3",
     "@ionic-native/status-bar": "^4.3.2",
-    "@ionic/storage": "^2.0.1",
+    "@ionic/storage": "^2.1.3",
+    "@types/chart.js": "^2.7.6",
     "@types/chartjs": "0.0.31",
     "@types/d3": "^4.12.0",
-    "@types/chart.js": "^2.7.6",
-    "chart.js": "^2.7.1"
+    "@types/websql": "0.0.27",
+    "chart.js": "^2.7.1",
     "cordova-android": "^6.3.0",
     "cordova-browser": "5.0.3",
     "cordova-ios": "^4.5.4",
@@ -42,6 +43,7 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-websql": "0.0.10",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.2.0",
     "cordova-windows": "^5.0.0",
@@ -53,6 +55,7 @@
     "rxjs": "^5.5.0",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
+    "websql": "^0.4.4",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -71,7 +74,8 @@
       "uk.co.workingedge.cordova.plugin.sqliteporter": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-websql": {}
     },
     "platforms": [
       "android",
